--- a/ApplicationInsightsXamarinSDK/ApplicationInsightsXamarin/AI.XamarinSDK.WinPhone/AI.XamarinSDK.WinPhone.csproj
+++ b/ApplicationInsightsXamarinSDK/ApplicationInsightsXamarin/AI.XamarinSDK.WinPhone/AI.XamarinSDK.WinPhone.csproj
@@ -41,6 +41,15 @@
       <HintPath>..\..\packages\Xamarin.Forms.1.4.3.6374\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Platform.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Microsoft.ApplicationInsights.Extensibility.Windows">
+      <HintPath>..\..\packages\Microsoft.ApplicationInsights.Xamarin.1.0.0-alpha1\lib\wp8\Microsoft.ApplicationInsights.Extensibility.Windows.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ApplicationInsights.PersistenceChannel">
+      <HintPath>..\..\packages\Microsoft.ApplicationInsights.Xamarin.1.0.0-alpha1\lib\wp8\Microsoft.ApplicationInsights.PersistenceChannel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ApplicationInsights">
+      <HintPath>..\..\packages\Microsoft.ApplicationInsights.Xamarin.1.0.0-alpha1\lib\wp8\Microsoft.ApplicationInsights.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
