--- a/ApplicationInsightsXamarinSDK/ApplicationInsightsXamarin/AI.XamarinSDK.iOS/AI.XamarinSDK.iOS.csproj
+++ b/ApplicationInsightsXamarinSDK/ApplicationInsightsXamarin/AI.XamarinSDK.iOS/AI.XamarinSDK.iOS.csproj
@@ -32,23 +32,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Collections">
+      <HintPath>..\..\libs\System.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime">
+      <HintPath>..\..\libs\System.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.iOS" />
-    <Reference Include="Xamarin.Forms.Platform.iOS">
-      <HintPath>..\..\packages\Xamarin.Forms.1.4.3.6374\lib\Xamarin.iOS10\Xamarin.Forms.Platform.iOS.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Xamarin.Forms.Core">
-      <HintPath>..\..\packages\Xamarin.Forms.1.4.3.6374\lib\Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Xamarin.Forms.Xaml">
-      <HintPath>..\..\packages\Xamarin.Forms.1.4.3.6374\lib\Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Xamarin.Forms.Platform">
-      <HintPath>..\..\packages\Xamarin.Forms.1.4.3.6374\lib\Xamarin.iOS10\Xamarin.Forms.Platform.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -79,7 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AI.XamarinSDK.Abstractions\AI.XamarinSDK.Abstractions.csproj">
-      <Project>{5DAA7398-7822-44A5-993B-D595A6921D50}</Project>
+      <Project>{5daa7398-7822-44a5-993b-d595a6921d50}</Project>
       <Name>AI.XamarinSDK.Abstractions</Name>
     </ProjectReference>
   </ItemGroup>
