--- a/ApplicationInsightsXamarinSDK/DemoApp/DummyLibrary.iOS/DummyLibrary.iOS.csproj
+++ b/ApplicationInsightsXamarinSDK/DemoApp/DummyLibrary.iOS/DummyLibrary.iOS.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -52,5 +52,11 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
   <ItemGroup>
     <ObjcBindingNativeLibrary Include="libExamplePlugin.a" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\ApplicationInsightsXamarin\AI.XamarinSDK.iOS\AI.XamarinSDK.iOS.csproj">
+      <Project>{4b57344d-c4b3-44f8-8e15-cc5b3af1cc24}</Project>
+      <Name>AI.XamarinSDK.iOS</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
